# mgba-mcp

./: .gitignore  README.md  pyproject.toml
src/mgba_mcp/: __init__.py  emulator.py  server.py
tests/: test_emulator.py  test_mcp_tools.py
