[project]
name = "mgba-mcp"
version = "0.1.0"
description = "MCP server for mGBA emulator - programmatic Game Boy/GBC testing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pillow>=10.0.0",
]

[project.scripts]
mgba-mcp = "mgba_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mgba_mcp"]
